--- a/food_ordering_site.html
+++ b/food_ordering_site.html
@@ -14,7 +14,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img src="food/gif1.gif" alt="International Rasoi" srcset="">
+            <img src="gif1.gif" alt="International Rasoi" srcset="">
         </div>
         <ul>
             <li class="item"><a href="food_ordering_site.html">Home</a></li>
@@ -58,7 +58,7 @@
                 <h3 id="new">Anytime Anywhere</h3>
 
                 <p class="boxx">
-                    <img src="food/anytime.jpg" alt="" srcset="" id="img2">
+                    <img src="anytime.jpg" alt="" srcset="" id="img2">
                     In this Quarantine when social distancing is need of the hour , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
                     time.
@@ -77,7 +77,7 @@
             <div>
                 <h3 id="new">Safety First</h3>
                 <p class="boxx">
-                    <img src="food/istockphoto-1217702128-170667a.jpg" alt="" srcset="" id="img2">
+                    <img src="istockphoto-1217702128-170667a.jpg" alt="" srcset="" id="img2">
                     <!-- <strong>Best in Safety</strong> <br> -->
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised kitchen  , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
@@ -97,7 +97,7 @@
             <div>
                 <h3 id="new">Quality Matters</h3>
                 <p class="boxx">
-                    <img src="food/quality.jpg" alt="" srcset="" id="img2">
+                    <img src="quality.jpg" alt="" srcset="" id="img2">
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised kitchen  , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
                     time.
