--- a/food_ordering_site_about.html
+++ b/food_ordering_site_about.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img src="food/gif1.gif" alt="International Rasoi" srcset="">
+            <img src="gif1.gif" alt="International Rasoi" srcset="">
         </div>
         <ul>
             <li class="item"><a href="food_ordering_site.html">Home</a></li>
@@ -27,7 +27,7 @@
     <hr>
     <section class="home">
         <div id="para">
-            <h1 id="primary">Welcome to International Rasoi</h1>
+            <h1 id="primary">LOVE YOU AYISHWARYA</h1>
             <p class="box">
                 <input type="text" placeholder="Enter you Location" class="box1">
                 <!-- <input type="select" id="select" placeholder="select food item"> -->
@@ -58,7 +58,7 @@
                 <h3 id="new"> Skype </h3>
 
                 <p class="boxx">
-                    <img src="food/skype-2.jpg" alt="" srcset="" id="img2">
+                    <img src="skype-2.jpg" alt="" srcset="" id="img2">
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised
                     kitchen , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
@@ -70,7 +70,7 @@
             <div>
                 <h3 id="new">Dominos</h3>
                 <p class="boxx">
-                    <img src="food/dominos.jpg" alt="" srcset="" id="img2">
+                    <img src="dominos.jpg" alt="" srcset="" id="img2">
                     <!-- <strong>Best in Safety</strong> <br> -->
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised
                     kitchen , we are here to solve your problem,
@@ -83,7 +83,7 @@
             <div>
                 <h3 id="new">Paytm</h3>
                 <p class="boxx">
-                    <img src="food/paytm.jpg" alt="" srcset="" id="img2"><br>
+                    <img src="paytm.jpg" alt="" srcset="" id="img2"><br>
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised
                     kitchen , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
@@ -95,7 +95,7 @@
             <div>
                 <h3 id="new">SBI</h3>
                 <p class="boxx">
-                    <img src="food/sbi.jpg" alt="" srcset="" id="img2"><br>
+                    <img src="sbi.jpg" alt="" srcset="" id="img2"><br>
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised
                     kitchen , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
@@ -107,7 +107,7 @@
             <div>
                 <h3 id="new">Bookmyshow</h3>
                 <p class="boxx">
-                    <img src="food/bookmyshow.png" alt="" srcset="" id="img2">
+                    <img src="bookmyshow.png" alt="" srcset="" id="img2">
                     For Us Safety and taste are the biggest priorities , recently we are awarded with most sanitised
                     kitchen , we are here to solve your problem,
                     now enjoy great quality food without compromising your safety. We deliver anytime-anywhere in no
