--- a/food_ordering_site_about.html
+++ b/food_ordering_site_about.html
@@ -27,7 +27,7 @@
     <hr>
     <section class="home">
         <div id="para">
-            <h1 id="primary">LOVE YOU AYISHWARYA</h1>
+            <h1 id="primary">I LOVE YOU AYISHWARYA</h1>
             <p class="box">
                 <input type="text" placeholder="Enter you Location" class="box1">
                 <!-- <input type="select" id="select" placeholder="select food item"> -->
